rajout de html.html

--- a/java.html
+++ b/java.html
@@ -34,7 +34,11 @@
     <div class="bloc">
 
         <div class="gauche">
-            <p></p>
+            <p>Java est un langage orienté objet qui utilise un compilateur (javac) puis une machine virtuelle
+                compabible toutes plateformes JVM Java Virtual Machine pour interpréter le Byte code. De ce fait,
+                c'est un langage offrant une grande portabilité.
+                C’est un langage à la fois compilé et interprété. Il est donc plus rapide que Python (interprété) mais
+                plus lent que C++ (compilé).</p>
         </div>
 
         <div class="droite">
@@ -277,6 +281,14 @@ public Socket(InetAddress adresse, int port, InetAddress adresseLocale, int loca
 
     <p>On utilise l'objet HttpURLConnection.</p>
     <p>Les flux BufferedInputStrean et BufferedOutputStrean permettent de gagner en performance plutôt que de travailler directement avec les sockets.</p>
+
+    <hr>
+
+    <!-- LES STREAMS -->
+
+    <h3>Les streams</h3>
+
+
 
 <hr>
 
