--- a/java.html
+++ b/java.html
@@ -56,6 +56,8 @@
             <li> <a href="#">Les streams</a> </li>
             <li> <a href="#">Les proxys</a> </li>
             <li> <a href="#">Le RMI</a></li>
+            <li> <a href="#">JMS</a></li>
+            <li> <a href="#">Les services Web</a></li>
         </ul>
 
     <hr>
@@ -478,9 +480,32 @@ class HelloClient {
     }
 }</pre>
 
+    <hr>
+
+    <!-- JMS -->
+
+    <h3>JMS</h3>
 
 
+    <hr>
 
+    <!-- Les services Web -->
+
+    <h3>Les services Web</h3>
+
+    <p>Les services Web sont un ensemble de technologies permettant l'invocation de méthodes distantes. La communication et l'échange de données sont basés sur les standard Web HTTP et XML. Il existe 2 familles de services Web.</p>
+
+    <p>SOAP Simple Object Access Protocol est un protocole de RPC Remote Procedure Call orienté objet et basé sur XML qui permet la transmission de messages entre objets distants. Le transfert se fait par le protocole HTTP ou SMTP. XML est déjà utilisé pour stocker et organiser les informations des requêtes. Un message SOAP est un document XML qui sert d'enveloppe à une en-tête et un corps de message.</p>
+    <p>SOAP permet l'interopérabilité entre différentes plate-formes.</p>
+
+    <p>Dans le cas de l'envoi d'une image, on peut utiliser un message MIME Multimedia Internet Mail Extension comme attachement d'un message SOAP.</p>
+
+    <p>Le client a besoin de la description détaillée du service Web qu'il veut utiliser avant de pouvoir interagir. Cette description est donnée par le WSDL Web Service Description Langage dans un document XML. WSDL est en fait un contrat entre un client et un serveur.</p>
+
+    <p>L'annuaire des services UDDI Universal Description Discovery and Integration est un standard pour l'enregistrement et la publication des informations sur les services Web. Une entrée du répertoire UDDI est constituée d'un fichier XML.</p>
+
+    <p>Pour développer un service Web, nous pouvons utiliser JAX-WS intégré dans Java.</p>
+     arret p87
 </section>
 
 <footer>
